--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,16 +99,8 @@
     <% if (i%2 == 0) { %>
     <div class="row">
       <div class="col m6">
-        <h4 ><a href="/baca/<%= postingan[i].idArtikel %>">Artikel dari <%= postingan[i].desa %></a></h4>
-        <!-- <h1>POSTINGAN DARI DESA </h1><h1><%= postingan[i].desa %></h1> -->
-        <!-- <h4><%= postingan[i].judul %></h4> -->
+        <h4 ><a href="/baca/<%= postingan[i].idArtikel %>" >Artikel dari <%= postingan[i].desa %></a></h4>
         <p><%= postingan[i].tentang%></p>
-        <!-- <div><img src="/images/uploaded/<%=postingan[i].foto%>"></div> -->
-
-        <br> 
-      </div>
-
-      <div class="col s12 m6">
         <div class="card">
           <div class="card-image">
             <img class="activator" src="/images/uploaded/<%=postingan[i].foto%>">
@@ -118,14 +110,14 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
-            <p><%= postingan[i].postingan%></p>
+            <p style="text-align: justify;"><%= postingan[i].postingan%></p>
           </div>
         </div>  
       </div>
-    </div>
-    <% } else { %>
-    <div class="row">
-      <div class="col m6">
+      <% } else { %>
+      <div class="col s12 m6">
+        <h4 ><a href="/baca/<%= postingan[i].idArtikel %>">Artikel dari <%= postingan[i].desa %></a></h4>
+        <p><%= postingan[i].tentang%></p>
         <div class="card">
           <div class="card-image">
             <img class="activator" src="/images/uploaded/<%=postingan[i].foto%>">
@@ -135,23 +127,25 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
-            <p><%= postingan[i].postingan%></p>
+            <p style="text-align: justify;"><%= postingan[i].postingan%></p>
           </div>
-        </div>
-        <br> 
-      </div>
-      <div class="col s12 m6">
-        <h4 ><a href="/baca/<%= postingan[i].idArtikel %>">Artikel dari <%= postingan[i].desa %></a></h4>
-        <!-- <h1>POSTINGAN DARI DESA </h1><h1><%= postingan[i].desa %></h1> -->
-        <!-- <h4><%= postingan[i].judul %></h4> -->
-        <p><%= postingan[i].tentang%></p>
-        <!-- <div><img src="/images/uploaded/<%=postingan[i].foto%>"></div> -->
+        </div>  
       </div>
     </div>
     <% } %>
     <% } %>
     <% } %>
   </div> 
+</div>
+  <div class="container">
+    <div class="row">
+        <a href="/" class="previous round">1</a>
+        <% for(var i = 0; i <= Math.ceil(postingan.length/4); i++) { %>  
+        <a href="/halaman/<%= i+2 %>" class="previous round"><%= i+2 %></a>
+        <% } %>
+      </div>
+    </div>
+  </div>
 </section>
 
 <!-- disini untuk membuat tab untuk kumpulan berita -->
