--- a/views/artikelCari.ejs
+++ b/views/artikelCari.ejs
@@ -88,9 +88,8 @@
             <h4 ><a href="">Artikel dari <%= postingan[i].desa %></a></h4>
             <!-- <h1>POSTINGAN DARI DESA </h1><h1><%= postingan[i].desa %></h1> -->
             <!-- <h4><%= postingan[i].judul %></h4> -->
-            <p><%= postingan[i].artikel%></p>
             <!-- <div><img src="/images/uploaded/<%=postingan[i].foto%>"></div> -->
-            <h5><%= postingan[i].postingan %></h5 >
+            <p ><%= postingan[i].tentang %></p >
             <br> 
           </div>
 
@@ -104,7 +103,7 @@
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
-                <p><%= postingan[i].artikel%></p>
+                <p style="text-align: justify;"><%= postingan[i].postingan%></p>
               </div>
             </div>  
           </div>
@@ -121,7 +120,7 @@
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
-                <p><%= postingan[i].artikel%></p>
+                <p style="text-align: justify;"><%= postingan[i].postingan%></p>
               </div>
             </div>
             <br> 
@@ -130,9 +129,8 @@
             <h4 ><a href="">Artikel dari <%= postingan[i].desa %></a></h4>
             <!-- <h1>POSTINGAN DARI DESA </h1><h1><%= postingan[i].desa %></h1> -->
             <!-- <h4><%= postingan[i].judul %></h4> -->
-            <p><%= postingan[i].artikel%></p>
             <!-- <div><img src="/images/uploaded/<%=postingan[i].foto%>"></div> -->
-            <h3><%= postingan[i].postingan %></h3>
+            <p><%= postingan[i].tentang %></p>
 
           </div>
         </div>
