--- a/views/artikel.ejs
+++ b/views/artikel.ejs
@@ -86,7 +86,7 @@
       <% if (i%2 == 0) { %>
       <div class="row">
         <div class="col m6">
-          <h4 ><a href="">Artikel dari <%= postingan[i].desa %></a></h4>
+          <h4 ><a href="/baca/<%= postingan[i].idArtikel %>">Artikel dari <%= postingan[i].desa %></a></h4>
           <!-- <h1>POSTINGAN DARI DESA </h1><h1><%= postingan[i].desa %></h1> -->
           <!-- <h4><%= postingan[i].judul %></h4> -->
           <p><%= postingan[i].tentang%></p>
@@ -105,7 +105,7 @@
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
-              <p><%= postingan[i].postingan%></p>
+              <p style="text-align: justify;"><%= postingan[i].postingan%></p>
             </div>
           </div>  
         </div>
@@ -122,13 +122,13 @@
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
-              <p><%= postingan[i].postingan%></p>
+              <p style="text-align: justify;"><%= postingan[i].postingan%></p>
             </div>
           </div>
           <br> 
         </div>
         <div class="col s12 m6">
-          <h4 ><a href="">Artikel dari <%= postingan[i].desa %></a></h4>
+          <h4 ><a href="/baca/<%= postingan[i].idArtikel %>">Artikel dari <%= postingan[i].desa %></a></h4>
           <!-- <h1>POSTINGAN DARI DESA </h1><h1><%= postingan[i].desa %></h1> -->
           <!-- <h4><%= postingan[i].judul %></h4> -->
           <p><%= postingan[i].tentang%></p>
