--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -17,23 +17,17 @@
       <title>Kelompok Informasi Masyarakat</title>
     </head>
 
-     <body id="home" class="scrollspy">
-     	<div class="col-md-5">
-				
-				<form class="container" action="/login" method="POST">
-					<div class="form-group">
-						<label for="username">USERNAME</label> <br>
-						<input type="text" size="30" id="username" aria-describedby="emailHelp" placeholder="Enter username" name="username">
+     <body>
+     
+       <% for(var i = 0; i < postingan.length; i++) { %>
+       <p><%= postingan[i].tentang%></p>
+       <% } %>
+       <br>
+       <h1>______________________________________________________________</h1>
+       <br>
 
-					</div>
-					<div class="form-group">
-						<label for="username">PASSWORD</label> <br>
-						<input  size="30" type="password" id="password" placeholder="Enter Password" name="password">
-					</div>
-					<button type="submit" class="btn btn-primary">Submit</button><br><br>
-				</form>
-			</div>
-
-       
+        <!-- <% for (var a = 0 ; a < 8; i++) { %>
+        <p><%=akun[a].namadesa %></p>
+        <% } %> -->
      </body>
      </html>
