--- a/views/halaman.ejs
+++ b/views/halaman.ejs
@@ -4,17 +4,16 @@
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="/css/materialize.min.css"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
 
   <!-- my CSS -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
   <!-- LINK FONT DARI FONT AWESOME -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <script type="text/javascript" src="app.js"></script>
   <title>Kelompok Informasi Masyarakat</title>
 </head>
 
@@ -26,8 +25,8 @@
     <nav class="indigo">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#navbar" class="brand-logo"><strong>| KIM</strong><i class="fab fa-asymmetrik medium"></i></a>
-          <a href="#navbar" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i> </a> 
+          <a href="/#navbar" class="brand-logo"><strong>| KIM</strong><i class="fab fa-asymmetrik medium"></i></a>
+          <a href="/#navbar" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i> </a> 
 
           <ul class="right hide-on-med-and-down">
 
@@ -51,9 +50,9 @@
 <ul class="sidenav" id="mobile-nav">
   <li><div class="user-view">
     <div class="background">
-      <img src="/images/portfolio/14.png">
+      <img src="../images/portfolio/14.png">
     </div>
-    <a href="#user"><img class="circle" src="/images/portfolio/3.png"></a>
+    <a href="#user"><img class="circle" src="../images/portfolio/3.png"></a>
     <a href="#name"><span class="white-text name">Kelompok Informasi Masyarakat</span></a>
     <a href="#email"><span class="white-text email">kimwarkop4@gmail.com</span></a>
   </div></li>
@@ -69,29 +68,27 @@
 
 <!-- disini untuk membuat gambar slider (slideshow) -->
 <div class="parallax-container" style="height: 750px">
-  <div class="parallax"><img src="/images/portfolio/4k.png"> </div>
+  <div class="parallax"><img src="../images/portfolio/4k.png"> </div>
   <ul class="slides">
     <li>
       <div class="container">
         <div class="caption center-align" style="font-family: comic sans-serif; text-shadow: 4px 4px #000000;" >
          <br><br><br> <h1 class="light grey-text text-lighten-3 center-align"><strong><br>K I M</strong></h1>
-          <h3 class="light grey-text text-lighten-3">Kelompok Informasi Masyarakat</h3>
-        </div>
-      </div>
+         <h3 class="light grey-text text-lighten-3">Kelompok Informasi Masyarakat</h3>
+       </div>
+     </div>
 
 
-    </li>
-  </ul>
+   </li>
+ </ul>
 </div>
 
 <!-- Disini untuk membuat kumpulan artikel -->
 <section id="artikel" class="Artikel grey lighten-5 scrollspy">
   <div class="row" >
     <div class="container" style="border-bottom: 1px solid blue;">
-
      <h3 class="center light black-text text-darken-4"><b>Artikel Terkini </b></h3>
      <h6 class="center light grey-text text-darken-4">Memuat artikel-artikel yang telah diterbitkan oleh masing-masing desa yang ada di kota Batu</h6><br>
-
    </div>
  </div>
 
@@ -115,8 +112,7 @@
             <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
             <p style="text-align: justify;"><%= postingan[i].postingan%></p>
           </div>
-        </div>
-        <p>Diposting pada <%= postingan[i].tanggal.toLocaleDateString()%></p>  
+        </div>  
       </div>
       <% } else { %>
       <div class="col s12 m6">
@@ -133,8 +129,7 @@
             <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
             <p style="text-align: justify;"><%= postingan[i].postingan%></p>
           </div>
-        </div> 
-        <p>Diposting pada <%= postingan[i].tanggal.toLocaleDateString()%></p>  
+        </div>  
       </div>
     </div>
     <% } %>
@@ -150,7 +145,6 @@
         <% } %>
       </div>
     </div>
-  </div>
 </section>
 
 <!-- disini untuk membuat tab untuk kumpulan berita -->
@@ -170,14 +164,12 @@
             <li class="tab"><a href="#test2" ">Kecamatan Bumiaji</a></li>
             <li class="tab"><a href="#test3">Kecamatan Junrejo</a></li>
           </ul>
-
-          
-          <div id="test1" class="col s12"><p> <!--ini kolom untuk kecamatan 1 -->
+ <div id="test1" class="col s12"><p> <!--ini kolom untuk kecamatan 1 -->
            <% for(var i = 0; i <=7; i++) { %>  
            <div class="col s12 m3">
             <div class="card small">
               <div class="card-image">
-               <img src="images/DESA/<%= i+1 %>.jpg">
+               <img src="../images/DESA/<%= i+1 %>.jpg">
              </div>
              <div class="card-content">
                <p><%= akun[i].namadesa%></p>
@@ -196,7 +188,7 @@
        <div class="col s12 m3">
         <div class="card small">
           <div class="card-image">
-           <img src="images/DESA/<%= i+1 %>.jpg">
+           <img src="../images/DESA/<%= i+1 %>.jpg">
          </div>
          <div class="card-content">
            <p><%= akun[i].namadesa%></p>
@@ -214,7 +206,7 @@
        <div class="col s12 m3">
         <div class="card small">
           <div class="card-image">
-           <img src="images/DESA/<%= i+1 %>.jpg">
+           <img src="../images/DESA/<%= i+1 %>.jpg">
          </div>
          <div class="card-content">
            <p><%= akun[i].namadesa%></p>
@@ -226,6 +218,7 @@
     </div>
     <%  } %> 
 </p></div>
+</div>
 </section>
 
 <!-- bagian TENTANG KAMI -->
@@ -256,7 +249,7 @@
       <div class="col s12 m3">
         <div class="card medium">
           <div class="card-image">
-            <img src="/images/slider/apel.png" class="responsive-img materialboxed">
+            <img src="../images/slider/apel.png" class="responsive-img materialboxed">
           </div>
           <div class="card-content">
             <h5 class="card-title">Pertanian</h5>
@@ -267,7 +260,7 @@
       <div class="col s12 m3">
         <div class="card medium">
           <div class="card-image">
-            <img src="/images/slider/patung.png" class="responsive-img materialboxed">
+            <img src="../images/slider/patung.png" class="responsive-img materialboxed">
           </div>
           <div class="card-content">
             <h5 class="card-title">Kerajinan</h5>
@@ -278,7 +271,7 @@
       <div class="col s12 m3">
         <div class="card medium">
           <div class="card-image">
-            <img src="/images/slider/jamur.png" class="responsive-img materialboxed">
+            <img src="../images/slider/jamur.png" class="responsive-img materialboxed">
           </div>
           <div class="card-content">
             <h5 class="card-title">Kuliner</h5>
@@ -289,7 +282,7 @@
       <div class="col s12 m3">
         <div class="card medium">
           <div class="card-image">
-            <img src="/images/slider/susu.png" class="responsive-img materialboxed">
+            <img src="../images/slider/susu.png" class="responsive-img materialboxed">
           </div>
           <div class="card-content">
             <h5 class="card-title">Susu</h5>
@@ -348,8 +341,8 @@
                     </div>
                   </div>
                   <div class="footer-copyright">
-                    <div class="container"><i class="material-icons tiny">copyright</i> 2019. Allright Reserved. Design by <a href="timpkl.html">TIM PKL.</a>
-                      <a class="grey-text text-lighten-4 right" href="/admin">Admin</a>
+                    <div class="container"><i class="material-icons tiny">copyright</i> 2019. Allright Reserved. Design by <a href="/coba">TIM PKL.</a>
+                      <a class="grey-text text-lighten-4 right" href="https://kim-warkop.blogspot.com/">Blog</a>
 
                     </div>
                   </div>
@@ -357,7 +350,7 @@
 
 
                 <!--JavaScript at end of body for optimized loading-->
-                <script type="text/javascript" src="js/materialize.min.js"></script>
+                <script type="text/javascript" src="../js/materialize.min.js"></script>
                 <script>
 
                   M.AutoInit();
