--- a/views/partials/contoh index.ejs
+++ b/views/partials/contoh index.ejs
@@ -48,6 +48,61 @@
       </nav>
     </div>
 
+        <div class="row">
+      <div class="col m6">
+        <h4 ><a href="/baca/<%= postingan[i].idArtikel %>" >Artikel dari <%= postingan[i].desa %></a></h4>
+        <p><%= postingan[i].tentang%></p>
+        <div class="card">
+          <div class="card-image">
+            <img class="activator" src="/images/uploaded/<%=postingan[i].foto%>">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
+            <p style="text-align: justify;"><%= postingan[i].postingan%></p>
+          </div>
+        </div>  
+      </div>
+      <% } else { %>
+      <div class="col s12 m6">
+        <h4 ><a href="/baca/<%= postingan[i].idArtikel %>">Artikel dari <%= postingan[i].desa %></a></h4>
+        <p><%= postingan[i].tentang%></p>
+        <div class="card">
+          <div class="card-image">
+            <img class="activator" src="/images/uploaded/<%=postingan[i].foto%>">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
+            <p style="text-align: justify;"><%= postingan[i].postingan%></p>
+          </div>
+        </div>  
+      </div>
+    </div>
+    
+
+
+<div class="container">
+    <div class="row">
+      <div class="col m5 s12">
+        <div class="grey lighten-3">
+        </div>
+      </div>
+      <div class="col m5 s12">
+        <h6>HALAMAN :</h6><br>
+        <a href="/" class="previous round">1</a>
+        <% for(var i = 0; i <= Math.ceil(postingan.length/4); i++) { %>  
+        <a href="/halaman/<%= i+2 %>" class="previous round"><%= i+2 %></a>
+        <% } %>
+      </div>
+      
+    </div>
+  </div>
+
 
     <!-- disini untuk membuat gambar slider (slideshow) -->
     <div class="slider">
@@ -155,7 +210,7 @@
                <!--ini kolom untuk kecamatan 1 -->
 
                <% if (akun) { %>
-               <% or (var a = 0 ; a < akun.length; i++) { %>
+               <% for (var a = 0 ; a < akun.length; i++) { %>
                <% if (akun[a].kecamatan == "Batu") { %>
                 <div id="test1" class="col s12"><p>
                  <div class="col s12 m3">
