--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ a:hover {
 }
 
 .previous {
-  background-color: #4CAF50;
+ /* background-color: #4CAF50;*/
   color: black;
   float: left!important;
 }
