--- a/views/partials/ggwp.html
+++ b/views/partials/ggwp.html
@@ -1,3 +1,36 @@
+<!--  <table class="table table-bordered table-hover">
+          <thead>
+            <tr>
+              <td>NO</td>
+              <td>DESA</td>
+              <td>TAHUN</td>
+              <td>BULAN</td>
+              <td>JUMLAH ARTIKEL</td>
+            </tr>
+          </thead>
+          <tbody>
+            <% if (data) { %>
+            <% for(var i = 0; i < data.length; i++) { %>
+            <tr>
+              <td><%= (i + 1) %></td>
+              <td><%= data[i].desa %></td>
+              <td><%= data[i].tahun %></td>
+              <td><%= data[i].bulan %></td>
+              <td><%= data[i].postingan %></td>
+              <td>
+                <a href="/update/<%= data[i].id %>" class="btn btn-info">Edit</a>
+                <a href="/delete/<%= data[i].id %>" class="btn btn-danger">Delete</a>
+              </td>
+            </tr>
+            <% } %>
+            <% } %>
+          </tbody>
+        </table> -->
+
+
+
+
+
               <div id="test1" class="col s12"><p> <!--ini kolom untuk kecamatan 1 -->
 
                 <div class="col s12 m3">
