--- a/views/artikel.ejs
+++ b/views/artikel.ejs
@@ -70,7 +70,7 @@
     <li>
       <img src="../images/portfolio/14.png"> 
       <div class="caption center-align">
-        <h1 class="light grey-text text-lighten-3"><%= namadesa %></h1>
+        <h1 class="light grey-text text-lighten-3"><%= nmdesa %></h1>
         <h4 class="light grey-text text-lighten-3">Kota Batu, Jawa Timur</h4s>
         </div>
       </li>
@@ -81,24 +81,20 @@
   <section id="artikel" class="Artikel grey lighten-4 scrollspy">
     <div class="container">
      <div>       
-      <% if (postingan) { %>
+      <% if (postingan.length != 0) { %>
       <% for(var i = 0; i < postingan.length; i++) { %>
       <% if (i%2 == 0) { %>
       <div class="row">
         <div class="col m6">
           <h4 ><a href="/baca/<%= postingan[i].idArtikel %>">Artikel dari <%= postingan[i].desa %></a></h4>
-          <!-- <h1>POSTINGAN DARI DESA </h1><h1><%= postingan[i].desa %></h1> -->
-          <!-- <h4><%= postingan[i].judul %></h4> -->
           <p><%= postingan[i].tentang%></p>
-          <!-- <div><img src="/images/uploaded/<%=postingan[i].foto%>"></div> -->
-          
-          <br> 
+            <br> 
         </div>
 
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
-              <img class="activator" src="/images/uploaded/<%=postingan[i].foto%>">
+              <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
@@ -115,7 +111,7 @@
         <div class="col m6">
           <div class="card">
             <div class="card-image">
-              <img class="activator" src="/images/uploaded/<%=postingan[i].foto%>">
+              <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
@@ -129,15 +125,14 @@
         </div>
         <div class="col s12 m6">
           <h4 ><a href="/baca/<%= postingan[i].idArtikel %>">Artikel dari <%= postingan[i].desa %></a></h4>
-          <!-- <h1>POSTINGAN DARI DESA </h1><h1><%= postingan[i].desa %></h1> -->
-          <!-- <h4><%= postingan[i].judul %></h4> -->
           <p><%= postingan[i].tentang%></p>
-          <!-- <div><img src="/images/uploaded/<%=postingan[i].foto%>"></div> -->
         </div>
       </div>
       <% } %>
       <% } %>
-      <% } %>
+      <% } else { %>
+      <h3>Belum ada postingan</h3>
+        <% } %>
     </div> 
   </section>
 
