--- a/views/artikelCari.ejs
+++ b/views/artikelCari.ejs
@@ -79,65 +79,55 @@
     <!-- Disini untuk membuat kumpulan artikel -->
     <section id="artikel" class="Artikel grey lighten-4 scrollspy">
       <div class="container">
-       <div>       
-        <% if (postingan) { %>
-        <% for(var i = 0; i < postingan.length; i++) { %>
-        <% if (i%2 == 0) { %>
-        <div class="row">
-          <div class="col m6">
-            <h4 ><a href="">Artikel dari <%= postingan[i].desa %></a></h4>
-            <!-- <h1>POSTINGAN DARI DESA </h1><h1><%= postingan[i].desa %></h1> -->
-            <!-- <h4><%= postingan[i].judul %></h4> -->
-            <!-- <div><img src="/images/uploaded/<%=postingan[i].foto%>"></div> -->
-            <p ><%= postingan[i].tentang %></p >
-            <br> 
+   <div>       
+    <% if (postingan!=0) { %>
+    <% for(var i = 0; i < postingan.length; i++) { %>
+    <% if (i%2 == 0) { %>
+    <div class="row">
+      <div class="col m6">
+        <h4 ><a href="/baca/<%= postingan[i].idArtikel %>" >Artikel dari <%= postingan[i].desa %></a></h4>
+        <p><%= postingan[i].tentang%></p>
+        <div class="card">
+          <div class="card-image">
+            <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
           </div>
-
-          <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img class="activator" src="/images/uploaded/<%=postingan[i].foto%>">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
-                <p style="text-align: justify;"><%= postingan[i].postingan%></p>
-              </div>
-            </div>  
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
+            <p style="text-align: justify;"><%= postingan[i].postingan%></p>
           </div>
         </div>
-        <% } else { %>
-        <div class="row">
-          <div class="col m6">
-            <div class="card">
-              <div class="card-image">
-                <img class="activator" src="/images/uploaded/<%=postingan[i].foto%>">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
-                <p style="text-align: justify;"><%= postingan[i].postingan%></p>
-              </div>
-            </div>
-            <br> 
+        <p>Diposting pada <%= postingan[i].tanggal.toLocaleDateString()%></p>  
+      </div>
+      <% } else { %>
+      <div class="col s12 m6">
+        <h4 ><a href="/baca/<%= postingan[i].idArtikel %>">Artikel dari <%= postingan[i].desa %></a></h4>
+        <p><%= postingan[i].tentang%></p>
+        <div class="card">
+          <div class="card-image">
+            <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
           </div>
-          <div class="col s12 m6">
-            <h4 ><a href="">Artikel dari <%= postingan[i].desa %></a></h4>
-            <!-- <h1>POSTINGAN DARI DESA </h1><h1><%= postingan[i].desa %></h1> -->
-            <!-- <h4><%= postingan[i].judul %></h4> -->
-            <!-- <div><img src="/images/uploaded/<%=postingan[i].foto%>"></div> -->
-            <p><%= postingan[i].tentang %></p>
-
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
           </div>
-        </div>
-        <% } %>
-        <% } %>
-        <% } %>
-      </div> 
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
+            <p style="text-align: justify;"><%= postingan[i].postingan%></p>
+          </div>
+        </div> 
+        <p>Diposting pada <%= postingan[i].tanggal.toLocaleDateString()%></p>  
+        </div>  
+      </div>
+    
+    <% } %>
+    <% } %>
+    <% } else {%>
+    <h4 style="text-align: center; color: red;">KATA YANG ANDA CARI TIDAK ADA DALAM ARTIKEL DESA</h4>
+     <% } %>
+     </div>
+  </div> 
     </section>
 
       <!-- ini untuk footer -->
