--- a/views/artikelpanjang.ejs
+++ b/views/artikelpanjang.ejs
@@ -96,7 +96,7 @@
           <div class="col s12 m6">
             <div class="card">
               <div class="card-image">
-                <img class="activator" src="/images/uploaded/<%=postingan[i].foto%>">
+                <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
@@ -113,7 +113,7 @@
           <div class="col m6">
             <div class="card">
               <div class="card-image">
-                <img class="activator" src="/images/uploaded/<%=postingan[i].foto%>">
+                <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
