--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <script type="text/javascript" src="app.js"></script>
+<!--   <script type="text/javascript" src="app.js"></script> -->
   <title>Kelompok Informasi Masyarakat</title>
 </head>
 
@@ -68,7 +68,7 @@
 
 
 <!-- disini untuk membuat gambar slider (slideshow) -->
-<div class="parallax-container" style="height: 750px">
+<div class="parallax-container" style="height: 763px">
   <div class="parallax"><img src="/images/portfolio/4k.png"> </div>
   <ul class="slides">
     <li>
@@ -76,6 +76,7 @@
         <div class="caption center-align" style="font-family: comic sans-serif; text-shadow: 4px 4px #000000;" >
          <br><br><br> <h1 class="light grey-text text-lighten-3 center-align"><strong><br>K I M</strong></h1>
           <h3 class="light grey-text text-lighten-3">Kelompok Informasi Masyarakat</h3>
+
         </div>
       </div>
 
@@ -95,7 +96,7 @@
    </div>
  </div>
 
- <div class="container">
+ <div class="container" style="border-bottom: 1px solid blue;">
    <div>       
     <% if (postingan) { %>
     <% for(var i = 0; i < postingan.length; i++) { %>
@@ -106,7 +107,7 @@
         <p><%= postingan[i].tentang%></p>
         <div class="card">
           <div class="card-image">
-            <img class="activator" src="/images/uploaded/<%=postingan[i].foto%>">
+            <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
@@ -124,7 +125,7 @@
         <p><%= postingan[i].tentang%></p>
         <div class="card">
           <div class="card-image">
-            <img class="activator" src="/images/uploaded/<%=postingan[i].foto%>">
+            <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
@@ -133,12 +134,9 @@
             <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
             <p style="text-align: justify;"><%= postingan[i].postingan%></p>
           </div>
-<<<<<<< HEAD
         </div> 
         <p>Diposting pada <%= postingan[i].tanggal.toLocaleDateString()%></p>  
-=======
         </div>  
->>>>>>> 9ac0a2f34b23cc519e0855d042e1a2d008815d3b
       </div>
     </div>
     <% } %>
@@ -148,9 +146,10 @@
 </div>
   <div class="container">
     <div class="row">
-        <a href="/" class="previous round">1</a>
-        <% for(var i = 0; i <= Math.ceil(postingan.length/4); i++) { %>  
-        <a href="/halaman/<%= i+2 %>" class="previous round"><%= i+2 %></a>
+      <h6>Kunjungi halaman lainnya : </h6>
+        <a href="/" class="previous round"><h6>1</h6></a>
+        <% for(var i = 0; i <= Math.ceil(halaman.length/4)-2; i++) { %>  
+        <a href="/halaman/<%= i+2 %>" class="previous round"><h6><%= i+2 %></h6></a>
         <% } %>
       </div>
     </div>
@@ -162,6 +161,7 @@
   <div class="container" >
     <div class="row">
       <h3 class="center light grey-text text-darken-4">Kumpulan Berita Terdahulu</h3>
+      
       <h6>Kumpulan berita terdahulu dari tiap-tiap desa dan kelurahan di kota Batu
         Silahkan klik tautan Kunjungi untuk mengunjungi artikel desa yang sudah pernah diterbitkan sebelumnya.
       Artikel-artikel ini sudah pernah diterbitkan pada blog masing-masing desa</h6><br>
@@ -187,7 +187,7 @@
                <p><%= akun[i].namadesa%></p>
              </div>
              <div class="card-action">
-              <a href="#">KUNJUNGI<i class="material-icons right">arrow_forward</i></a>
+              <a href="/kunjungi/<%= akun[i].namadesa.split(" ").splice(-1); %>">KUNJUNGI<i class="material-icons right">arrow_forward</i></a>
             </div>
           </div> 
         </div>
@@ -206,7 +206,7 @@
            <p><%= akun[i].namadesa%></p>
          </div>
          <div class="card-action">
-          <a href="#">KUNJUNGI<i class="material-icons right">arrow_forward</i></a>
+          <a href="/kunjungi/<%= akun[i].namadesa.split(" ").splice(-1); %>">KUNJUNGI<i class="material-icons right">arrow_forward</i></a>
         </div>
       </div> 
     </div>
@@ -224,7 +224,7 @@
            <p><%= akun[i].namadesa%></p>
          </div>
          <div class="card-action">
-          <a href="#">KUNJUNGI<i class="material-icons right">arrow_forward</i></a>
+          <a href="/kunjungi/<%= akun[i].namadesa.split(" ").splice(-1); %>">KUNJUNGI<i class="material-icons right">arrow_forward</i></a>
         </div>
       </div> 
     </div>
@@ -260,7 +260,7 @@
       <div class="col s12 m3">
         <div class="card medium">
           <div class="card-image">
-            <img src="/images/slider/apel.png" class="responsive-img materialboxed">
+            <img src="/images/uploaded/jualan/apel.png" class="responsive-img materialboxed">
           </div>
           <div class="card-content">
             <h5 class="card-title">Pertanian</h5>
@@ -271,7 +271,7 @@
       <div class="col s12 m3">
         <div class="card medium">
           <div class="card-image">
-            <img src="/images/slider/patung.png" class="responsive-img materialboxed">
+            <img src="/images/uploaded/jualan/patung.png" class="responsive-img materialboxed">
           </div>
           <div class="card-content">
             <h5 class="card-title">Kerajinan</h5>
@@ -282,7 +282,7 @@
       <div class="col s12 m3">
         <div class="card medium">
           <div class="card-image">
-            <img src="/images/slider/jamur.png" class="responsive-img materialboxed">
+            <img src="/images/uploaded/jualan/jamur.png" class="responsive-img materialboxed">
           </div>
           <div class="card-content">
             <h5 class="card-title">Kuliner</h5>
@@ -293,7 +293,7 @@
       <div class="col s12 m3">
         <div class="card medium">
           <div class="card-image">
-            <img src="/images/slider/susu.png" class="responsive-img materialboxed">
+            <img src="/images/uploaded/jualan/susu.png" class="responsive-img materialboxed">
           </div>
           <div class="card-content">
             <h5 class="card-title">Susu</h5>
@@ -352,7 +352,7 @@
                     </div>
                   </div>
                   <div class="footer-copyright">
-                    <div class="container"><i class="material-icons tiny">copyright</i> 2019. Allright Reserved. Design by <a href="timpkl.html">TIM PKL.</a>
+                    <div class="container"><i class="material-icons tiny">copyright</i> 2019. Allright Reserved. Design by <a href="/coba">TIM PKL.</a>
                       <a class="grey-text text-lighten-4 right" href="/admin">Admin</a>
 
                     </div>
