--- a/views/jualbeli.ejs
+++ b/views/jualbeli.ejs
@@ -15,6 +15,8 @@
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jual Beli</title>
+
+
 </head>
 
 <body id="home" class="scrollspy">
@@ -57,7 +59,7 @@
   <li><a href="#artikel">Artikel</a></li>
   <li><a href="#Kumpulanberita">Kumpulan Berita </a></li>
   <li><a href="#about">Tentang Kami</a></li>
-  <li><a href="#Jualbeli">Jual Beli Online</a></li>
+  <li><a href="#Jualbeli">Produk Desa</a></li>
   <li><a href="http://agropolitan.tv">Agropolitan TV</a></li>
   <li><a href="#cari"><i class="material-icons">search</i></a></li>
 </ul>
@@ -69,23 +71,24 @@
     <form action="/beli" method="POST">
     <div class="container">
       <div class="row">
-        <h3 class="center light grey-text text-darken-4">Produk Kami</h3>
+        <h3 class="center light grey-text text-darken-4">Produk Desa</h3>
 
         <%  if (jual) { %>
         <% for (var i = 0; i < jual.length; i++) { %>
         <div class="col s12 m3">
           <div class="card medium">
             <div class="card-image">
-              <img src="/images/slider/<%=jual[i].foto%>" class="responsive-img materialboxed">
+              <img src="/images/UPLOADED/JUALAN/<%=jual[i].foto%>" class="responsive-img materialboxed">
             </div>
             <div class="card-content">
               <h5 class="card-title"><%=jual[i].namabrg%> </h5>
-              <p><%=jual[i].kategori%></p>
-              <p>Rp. <%=jual[i].hargabrg%> ,-</p>
+              <object name="kategori"><%=jual[i].kategori%></object>
+              <p name="harga">Rp. <%=jual[i].hargabrg%> ,-</p>
+              <p> dari <%=jual[i].sumber%></p>
             </div>
             <div class="card-action">
               <label>
-                <input type="checkbox" name="pilihan" value="<%=jual[i].namabrg%> : Rp. <%=jual[i].hargabrg%> ,-" />
+                <input type="checkbox" name="pilihan" value="<%=jual[i].namabrg%> : Rp <%=jual[i].hargabrg%>" />
                 <span>Pilih</span>
               </label>
             </div>
@@ -95,78 +98,7 @@
         <% } %>
       </div> 
     </div>
-<!-- 
-              <div class="col s12 m3">
-                <div class="card medium">
-                  <div class="card-image">
-                    <img src="/images/slider/apel.png" class="responsive-img materialboxed">
-                  </div>
-                  <div class="card-content">
-                    <h5 class="card-title">Pertanian</h5>
-                    <p>Hasil pertanian.</p>
-                  </div>
-                  <div class="card-action">
-                    <label>
-                      <input type="checkbox" />
-                      <span>Pilih</span>
-                    </label>
-                  </div>
-                </div>
-              </div>
-              <div class="col s12 m3">
-                <div class="card medium">
-                  <div class="card-image">
-                    <img src="/images/slider/patung.png" class="responsive-img materialboxed">
-                  </div>
-                  <div class="card-content">
-                    <h5 class="card-title">Kerajinan</h5>
-                    <p>Hasil kerajinan patung.</p>
-                  </div>
-                  <div class="card-action">
-                    <label>
-                      <input type="checkbox" />
-                      <span>Pilih</span>
-                    </label>
-                  </div>
-                </div>
-              </div>
-              <div class="col s12 m3">
-                <div class="card medium">
-                  <div class="card-image">
-                    <img src="/images/slider/jamur.png" class="responsive-img materialboxed">
-                  </div>
-                  <div class="card-content">
-                    <h5 class="card-title">Kuliner</h5>
-                    <p>Keripik jamur.</p>
-                  </div>
-                  <div class="card-action">
-                    <label>
-                      <input type="checkbox" />
-                      <span>Pilih</span>
-                    </label>
-                  </div>
-                </div>
-              </div>
-              <div class="col s12 m3">
-                <div class="card medium">
-                  <div class="card-image">
-                    <img src="/images/slider/susu.png" class="responsive-img materialboxed">
-                  </div>
-                  <div class="card-content">
-                    <h5 class="card-title">Susu</h5>
-                    <p>Produk susu.</p>
-                  </div>
-                  <div class="card-action">
-                    <label>
-                      <input type="checkbox" />
-                      <span>Pilih</span>
-                    </label>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        -->
+
         <div class="container">
           <div class="row">
             <div class="col m5 s12">
@@ -177,7 +109,7 @@
              <button class="btn waves-effect waves-light orange accent-4 btn-large" type="submit" name="action">BELI
               <i class="material-icons right">send</i>
             </button></div></div><br>
-</form>
+          </form>
           </section>
 
           <!-- ini untuk footer -->
