--- a/views/komentar.ejs
+++ b/views/komentar.ejs
@@ -19,12 +19,12 @@
 
 <body id="home" class="scrollspy">
   <!-- Ini untuk navbar -->
-   <div class="navbar-fixed">
-  <nav class="indigo">
-    <div class="container">
-      <div class="nav-wrapper">
-        <a href="/" class="brand-logo">KIM<i class="fab fa-asymmetrik medium"></i></a>
-       <a href="#navbar" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i> </a> 
+  <div class="navbar-fixed">
+    <nav class="indigo">
+      <div class="container">
+        <div class="nav-wrapper">
+          <a href="/" class="brand-logo">KIM<i class="fab fa-asymmetrik medium"></i></a>
+          <a href="#navbar" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i> </a> 
 
           <ul class="right hide-on-med-and-down">
 
@@ -34,23 +34,18 @@
             <li><a href="/#Jualbeli">Jual Beli Online</a></li>
             <li><a href="http://agropolitan.tv">Agropolitan TV</a></li>
             <li> <form action="/cari" method="POST">
-            <li><a href="#cari" class="fa fa-search"></a></li>
-            <li> <input type="search" class="fa fa-search" name="cari" id="cari" style="color: white"> </li>
+              <li><a href="#cari" class="fa fa-search"></a></li>
+              <li> <input type="search" class="fa fa-search" name="cari" id="cari" style="color: white"> </li>
             </form>
           </li>
-          <li>
-              <div>
-                  <a href="/logout" class="btn btn-warning";">KELUAR</a>
-                </div>
-          </li>
 
 
-          </ul>
+        </ul>
 
-        </div>
       </div>
-    </nav>
-  </div>
+    </div>
+  </nav>
+</div>
 
 <ul class="sidenav" id="mobile-nav">
   <li><div class="user-view">
@@ -69,94 +64,213 @@
   <li><a href="#cari"><i class="material-icons">search</i></a></li>
 </ul>
 
-    <section id="komentar" class="komentar grey lighten-3">
-      <div class="">
-        <h3 class="light grey-text text-darken-3 center">Tambahkan Artikel <%= greetings %></h3>
-        <div class="container">
-          <form action="/tambahartikel" method="POST" enctype="multipart/form-data">
-            <div class="card-panel">
-              <!-- <form class="col s12"> -->
+
+<div class="row ">
+  <ul class="tabs tabs-fixed-width tab-demo black lighten-4">
+    <li class="tab"><a class="active" href="#postingan">Tambahkan Artikel Desa Oro-oro Ombo</a></li>
+    <li class="tab"><a href="#jual" >Tambahkan Produk Desa Untuk Dijual</a></li>
+    <li class="tab"><a href="#kelola" >Kelola Artikel Desa</a></li>
+  </ul>
+</div>
+
+<section id="postingan" class="komentar grey lighten-3">
+  <div class="">
+    <h3 class="light grey-text text-darken-3 center">Tambahkan Artikel <%= greetings %></h3>
+    <div class="container">
+      <form action="/tambahartikel" method="POST" enctype="multipart/form-data">
+        <div class="card-panel">
+          <h6 style="color: red"><%= message %></h6>
+          <!-- <form class="col s12"> -->
+            <div class="row">
+              <div class="input-field col s6">
+                <input id="desa" name="desa" type="text" value="<%= greetings %>" required>
+
+              </div></div>
+              <div class="row">
+                <div class="input-field col s6">
+                  <input id="judul" name="judul" type="text" required>
+                  <label for="judul">Judul</label>
+                </div></div>
                 <div class="row">
                   <div class="input-field col s6">
-                    <input id="desa" name="desa" type="text" value="<%= greetings %>">
-                  </div></div>
-                <div class="row">
-                  <div class="input-field col s6">
-                    <input id="judul" name="judul" type="text">
-                    <label for="judul">Judul</label>
-                  </div></div>
-                  <div class="row">
-                  <div class="input-field col s6">
-                    <input id="tentang" name="tentang" type="text" >
+                    <input id="tentang" name="tentang" type="text" required>
                     <label for="tentang">Tentang</label>
                   </div></div>
 
                   <div class="file-field input-field">
                     <div class="btn indigo orange accent-4">
                       <span>Foto</span>
-                      <input type="file" id="filetoupload" name="filetoupload" multiple>
+                      <input type="file" id="filetoupload" name="filetoupload" multiple required>
                     </div>
                     <div class="file-path-wrapper">
-                      <input class="file-path validate" type="text" placeholder="Upload foto">
+                      <input class="file-path validate" type="text" placeholder="Upload foto" required>
                     </div>
                   </div>
 
 
                   <div class="input-field col s12">
-                    <textarea id="artikel" name="artikel" class="materialize-textarea" data-length="1000"></textarea>
+                    <textarea id="artikel" name="artikel" class="materialize-textarea" data-length="1000" required></textarea>
                     <label for="artikel">Artikel</label>
                   </div>
 
                   <button class="btn waves-effect waves-light orange accent-4" type="submit" name="action">Submit
                     <i class="material-icons right">send</i>
                   </button>
+                  <a href="/logout" class="btn btn-warning" style="float: right;" ;>KELUAR</a>
 
-            </div>
+                </div>
               </form>            
             </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <!-- ini untuk footer -->
-  <footer class="page-footer indigo darken-2">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Alamat Kantor</h5> <br>
-            <p class="grey-text text-lighten-4">Kelompok Informasi Masyarakat <br>Jl. Panglima Sudirman No.507, Pesanggrahan, Kecamatan Batu, <br>Jawa Timur - 65313</p>
-          </div>
-          <div class="col l3 s12">
-            <h5 class="white-text">Kontak</h5> <br>
-            <p><i class="fas fa-phone"></i> (0341) 3061892 <br><i class="far fa-envelope"></i>  kimwarkop4@gmail.com</p>
-          </div>
+        <section id="jual" class="komentar grey lighten-3">
+          <div class="">
+            <h3 class="light grey-text text-darken-3 center">Tambahkan Produk <%= greetings %></h3>
+            <div class="container">
+              <form action="/tambahproduk" method="POST" enctype="multipart/form-data">
+                <div class="card-panel">
+                  <!-- <form class="col s12"> -->
+                    <div class="row">
+                      <div class="input-field col s6">
+                        <input id="desa" name="desa" type="text" value="<%= greetings %>" required>
+                      </div></div>
+                      <div class="row">
+                        <div class="input-field col s6">
+                          <input id="produk" name="produk" type="text" required>
+                          <label for="produk">Nama Produk</label>
+                        </div></div>
 
-          <div class="col l3 s12">
-            <h5 class="white-text">Social Media</h5> <br>
-            <ul>
-              <div class="col s12 m2">
-                <li><a class="white-text" href="https://www.instagram.com/kim_tulungrejo/"><i class="fab fa-instagram small"></i></a></li></div>
-                <div class="col s12 m2">
-                <li><a class="white-text" href="/whatsapp"><i class="fab fa-whatsapp small"></i></a></li></div>
-                <div class="col s12 m2">
-                  <li><a class="white-text" href="https://www.facebook.com/kimtulungrejo.kwb.1"><i class="fab fa-facebook-square small"></i></a></li></div>
-                  <div class="col s12 m2">
-                    <li><a class="white-text" href="https://twitter.com/KimAnjasmoro"><i class="fab fa-twitter small"></i></a></li></div>
-                    <div class="col s12 m2">
-                      <li><a class="white-text" href="https://plus.google.com/+KIMDesaTulungrejoKotaBatu"><i class="fab fa-google-plus-g small"></i></a></li></div> <br>
-                    </ul>
+                        <div class="row">
+                          <div class="input-field col s6">
+                            <input id="harga" name="harga" type="text" required>
+                            <label for="harga">Harga Produk</label>
+                          </div></div>
+
+                          <div class="row">
+                            <div class="input-field col s6">
+                              <p style="color: #9e9e9e;">Kategori :</p>
+                              <select id="kategori" name="kategori">
+                                <option value="Kerajinan">Kerajinan</option>
+                                <option value="Pertanian">Pertanian</option>
+                                <option value="Kuliner">Kuliner</option>
+                                <option value="Lain-lain">Lain-lain</option>
+                              </select>
+                            </div></div>
+
+                            <div class="file-field input-field">
+                              <div class="btn indigo orange accent-4">
+                                <span>Foto</span>
+                                <input type="file" id="filetoupload" name="filetoupload" multiple required>
+                              </div>
+                              <div class="file-path-wrapper">
+                                <input class="file-path validate" type="text" placeholder="Upload foto" required>
+                              </div>
+                            </div>             
+
+                            <button class="btn waves-effect waves-light orange accent-4" type="submit" name="action">Submit
+                              <i class="material-icons right">send</i>
+                            </button>
+                            <a href="/logout" class="btn btn-warning" style="float: right;" ;">KELUAR</a>
+
+                          </div>
+                        </form>            
+                      </div>
+                    </div>
+                  </section>
+
+
+                  <section id="kelola" class="komentar grey lighten-3">
+                    <div class="container" style="border-bottom: 1px solid blue;">
+                     <div>       
+                      <% for(var i = 0; i < postingan.length; i++) { %>
+                      <% if (i%2 == 0) { %>
+                      <div class="row">
+                        <div class="col m6">
+                          <h4 >Artikel dari <%= postingan[i].desa %></h4>
+                          <p><%= postingan[i].tentang%></p>
+                          <div class="card">
+                            <div class="card-image">
+                              <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
+                            </div>
+                            <div class="card-reveal">
+                              <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
+                              <p style="text-align: justify;"><%= postingan[i].postingan%></p>
+                            </div>
+                          </div>
+                          <p>Diposting pada <%= postingan[i].tanggal.toLocaleDateString()%></p> 
+                          <a class="waves-effect waves-light btn-large orange accent-4" href="/update/<%= postingan[i].idArtikel %>"><i class="material-icons right"></i>UBAH</a>
+                          <a class="waves-effect waves-light btn-large red accent-4" href="/delete/<%= postingan[i].idArtikel %>"><i class="material-icons right"></i>HAPUS</a>
+                        </div>
+                        <% } else { %>
+                        <div class="col s12 m6">
+                          <h4 >Artikel dari <%= postingan[i].desa %></h4>
+                          <p><%= postingan[i].tentang%></p>
+                          <div class="card">
+                            <div class="card-image">
+                              <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
+                            </div>
+                            <div class="card-reveal">
+                              <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
+                              <p style="text-align: justify;"><%= postingan[i].postingan%></p>
+                            </div>
+                          </div> 
+                          <p>Diposting pada <%= postingan[i].tanggal.toLocaleDateString()%></p>  
+                          <a class="waves-effect waves-light btn-large orange accent-4" href="/update/<%= postingan[i].idArtikel %>"><i class="material-icons right"></i>UBAH</a>
+                          <a class="waves-effect waves-light btn-large red accent-4" href="/delete/<%= postingan[i].idArtikel %>"><i class="material-icons right"></i>HAPUS</a>
+                        </div>
+                      </div>
+                      <% } %>
+                      <% } %>
+                    </div> 
                   </div>
                 </div>
-              </div>
-              <div class="footer-copyright">
-                <div class="container"><i class="material-icons tiny">copyright</i> 2019. Allright Reserved. Design by <a href="timpkl.html">TIM PKL.</a>
-                  <a class="grey-text text-lighten-4 right" href="https://kim-warkop.blogspot.com/">Blog</a>
-
-                </div>
-              </div>
-            </footer>
+              </section>
 
 
+              <!-- ini untuk footer -->
+              <footer class="page-footer indigo darken-2">
+                <div class="container">
+                  <div class="row">
+                    <div class="col l6 s12">
+                      <h5 class="white-text">Alamat Kantor</h5> <br>
+                      <p class="grey-text text-lighten-4">Kelompok Informasi Masyarakat <br>Jl. Panglima Sudirman No.507, Pesanggrahan, Kecamatan Batu, <br>Jawa Timur - 65313</p>
+                    </div>
+                    <div class="col l3 s12">
+                      <h5 class="white-text">Kontak</h5> <br>
+                      <p><i class="fas fa-phone"></i> (0341) 3061892 <br><i class="far fa-envelope"></i>  kimwarkop4@gmail.com</p>
+                    </div>
+
+                    <div class="col l3 s12">
+                      <h5 class="white-text">Social Media</h5> <br>
+                      <ul>
+                        <div class="col s12 m2">
+                          <li><a class="white-text" href="https://www.instagram.com/kim_tulungrejo/"><i class="fab fa-instagram small"></i></a></li></div>
+                          <div class="col s12 m2">
+                            <li><a class="white-text" href="/whatsapp"><i class="fab fa-whatsapp small"></i></a></li></div>
+                            <div class="col s12 m2">
+                              <li><a class="white-text" href="https://www.facebook.com/kimtulungrejo.kwb.1"><i class="fab fa-facebook-square small"></i></a></li></div>
+                              <div class="col s12 m2">
+                                <li><a class="white-text" href="https://twitter.com/KimAnjasmoro"><i class="fab fa-twitter small"></i></a></li></div>
+                                <div class="col s12 m2">
+                                  <li><a class="white-text" href="https://plus.google.com/+KIMDesaTulungrejoKotaBatu"><i class="fab fa-google-plus-g small"></i></a></li></div> <br>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="footer-copyright">
+                            <div class="container"><i class="material-icons tiny">copyright</i> 2019. Allright Reserved. Design by <a href="timpkl.html">TIM PKL.</a>
+                              <a class="grey-text text-lighten-4 right" href="https://kim-warkop.blogspot.com/">Blog</a>
+
+                            </div>
+                          </div>
+                        </footer>
 
 
 
@@ -164,33 +278,35 @@
 
 
 
-              <script type="text/javascript" src="js/materialize.min.js"></script>
-              <script>
-
-                M.AutoInit();
-
-                const sideNav = document.querySelectorAll('.sidenav');
-                M.Sidenav.init(sideNav);
-
-                const slider = document.querySelectorAll('.slider');
-                M.Slider.init(slider, {
-                  indicators:false,
-                  interval:7000,
-                  duration:500, 
-                  height:480 
-                });
-                const parallax= document.querySelectorAll('.parallax');
-                M.Parallax.init(parallax); 
-
-                const materialbox= document.querySelectorAll('.materialboxed');
-                M.Materialbox.init(materialbox);
-
-                const scroll = document.querySelectorAll('.scrollspy');
-                M.ScrollSpy.init(scroll, {
-                  scrollOffset: 50
-                });
 
 
-              </script>
-            </body>
-            </html>
+                        <script type="text/javascript" src="js/materialize.min.js"></script>
+                        <script>
+
+                          M.AutoInit();
+
+                          const sideNav = document.querySelectorAll('.sidenav');
+                          M.Sidenav.init(sideNav);
+
+                          const slider = document.querySelectorAll('.slider');
+                          M.Slider.init(slider, {
+                            indicators:false,
+                            interval:7000,
+                            duration:500, 
+                            height:480 
+                          });
+                          const parallax= document.querySelectorAll('.parallax');
+                          M.Parallax.init(parallax); 
+
+                          const materialbox= document.querySelectorAll('.materialboxed');
+                          M.Materialbox.init(materialbox);
+
+                          const scroll = document.querySelectorAll('.scrollspy');
+                          M.ScrollSpy.init(scroll, {
+                            scrollOffset: 50
+                          });
+
+
+                        </script>
+                      </body>
+                      </html>
