--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
             <li><a href="/#artikel">Artikel</a></li>
             <li><a href="/#Kumpulanberita">Kumpulan Berita </a></li>
             <li><a href="/#about">Tentang Kami</a></li>
-            <li><a href="/#Jualbeli">Jual Beli Online</a></li>
+            <li><a href="/#Jualbeli">Produk Desa</a></li>
             <li><a href="http://agropolitan.tv">Agropolitan TV</a></li>
             <li> <form action="/cari" method="POST">
             <li><a href="#cari" class="fa fa-search"></a></li>
@@ -57,7 +57,7 @@
   <li><a href="#artikel">Artikel</a></li>
   <li><a href="#Kumpulanberita">Kumpulan Berita </a></li>
   <li><a href="#about">Tentang Kami</a></li>
-  <li><a href="#Jualbeli">Jual Beli Online</a></li>
+  <li><a href="#Jualbeli">Produk Desa</a></li>
   <li><a href="http://agropolitan.tv">Agropolitan TV</a></li>
   <li><a href="#cari"><i class="material-icons">search</i></a></li>
 </ul>
