--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,29 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="/css/materialize.min.css"  media="screen,projection"/>
-
-  <!-- my CSS -->
-  <link rel="stylesheet" href="/css/style.css">
-
-  <!-- LINK FONT DARI FONT AWESOME -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <% include ./partials/head %>
   <title>ADMIN PAGE</title>
 </head>
 <body class="blue lighten-4 ">
 
   <ul class="tabs tabs-fixed-width tab-demo black lighten-1" >
     <li class="tab"><a class="active" href="#admin1">PERMINTAAN ARTIKEL</a></li>
-    <li class="tab"><a href="#admin2" ">KELOLA ARTIKEL</a></li>
-    <li class="tab"><a href="#admin3">KELOLA AKUN KIM</a></li>
+    <li class="tab"><a href="#admin2" >KELOLA ARTIKEL</a></li>
+    <li class="tab"><a href="#admin3">LIHAT AKUN KIM</a></li>
      <li class="tab"><a href="#admin4">PERMINTAAN PENJUALAN PRODUK DESA</a></li>
-      <li class="tab"><a href="#admin5" ">KELOLA PRODUK DESA</a></li>
+      <li class="tab"><a href="#admin5" >KELOLA PRODUK DESA</a></li>
   </ul>
 
   <section id="admin1" class="Artikel blue lighten-4  scrollspy">
