--- a/views/artikelCari.ejs
+++ b/views/artikelCari.ejs
@@ -1,68 +1,13 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="../css/materialize.min.css"  media="screen,projection"/>
+<html>
+<head>
+ <% include ./partials/head %>
+ <title>Hasil Pencarian Artikel</title>
+</head>
 
-      <!-- my CSS -->
-      <link rel="stylesheet" href="../css/style.css">
+<body id="home" class="scrollspy">
+  <% include ./partials/headerNN %>
 
-      <!-- LINK FONT DARI FONT AWESOME -->
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>Artikel Desa</title>
-    </head>
-
-    <body id="home" class="scrollspy">
-      
- <!-- Ini untuk navbar -->
- <div class="navbar-fixed scrollspy" id="navbar">
-    <nav class="indigo ">
-      <div class="container">
-        <div class="nav-wrapper">
-          <a href="/" class="brand-logo"><strong>| KIM</strong><i class="fab fa-asymmetrik medium"></i></a>
-          <a href="#navbar" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i> </a> 
-
-          <ul class="right hide-on-med-and-down">
-            
-            <li><a href="#artikel">Artikel</a></li>
-            <li><a href="#Kumpulanberita">Kumpulan Berita </a></li>
-            <li><a href="#about">Tentang Kami</a></li>
-            <li><a href="#Jualbeli">Produk Desa</a></li>
-            <li><a href="http://agropolitan.tv">Agropolitan TV</a></li>
-           <li> <form action="/cari" method="POST">
-            <li><a href="#navbar" class="fa fa-search"></a></li>
-            <li> <input type="search" class="fa fa-search" name="cari" id="cari" style="color: white"> </li>
-            </form>
-          </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </div>
-
-<ul class="sidenav" id="mobile-nav">
-  <li><div class="user-view">
-    <div class="background">
-      <img src="/images/portfolio/14.png">
-    </div>
-    <a href="#user"><img class="circle" src="/images/portfolio/3.png"></a>
-    <a href="#name"><span class="white-text name">Kelompok Informasi Masyarakat</span></a>
-    <a href="#email"><span class="white-text email">kimwarkop4@gmail.com</span></a>
-  </div></li>
-  <li><a href="#artikel">Artikel</a></li>
-  <li><a href="#Kumpulanberita">Kumpulan Berita </a></li>
-  <li><a href="#about">Tentang Kami</a></li>
-  <li><a href="#Jualbeli">Jual Beli Online</a></li>
-  <li><a href="http://agropolitan.tv">Agropolitan TV</a></li>
-  <li><a href="#cari"><i class="material-icons">search</i></a></li>
-</ul>
-
-      
   <!-- disini untuk membuat gambar slider (slideshow) -->
   <div class="slider">
     <ul class="slides">
@@ -79,121 +24,88 @@
     <!-- Disini untuk membuat kumpulan artikel -->
     <section id="artikel" class="Artikel grey lighten-4 scrollspy">
       <div class="container">
-   <div>       
-    <% if (postingan!=0) { %>
-    <% for(var i = 0; i < postingan.length; i++) { %>
-    <% if (i%2 == 0) { %>
-    <div class="row">
-      <div class="col m6">
-        <h4 ><a href="/baca/<%= postingan[i].idArtikel %>" >Artikel dari <%= postingan[i].desa %></a></h4>
-        <p><%= postingan[i].tentang%></p>
-        <div class="card">
-          <div class="card-image">
-            <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
-            <p style="text-align: justify;"><%= postingan[i].postingan%></p>
-          </div>
-        </div>
-        <p>Diposting pada <%= postingan[i].tanggal.toLocaleDateString()%></p>  
-      </div>
-      <% } else { %>
-      <div class="col s12 m6">
-        <h4 ><a href="/baca/<%= postingan[i].idArtikel %>">Artikel dari <%= postingan[i].desa %></a></h4>
-        <p><%= postingan[i].tentang%></p>
-        <div class="card">
-          <div class="card-image">
-            <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
-            <p style="text-align: justify;"><%= postingan[i].postingan%></p>
-          </div>
-        </div> 
-        <p>Diposting pada <%= postingan[i].tanggal.toLocaleDateString()%></p>  
-        </div>  
-      </div>
-    
-    <% } %>
-    <% } %>
-    <% } else {%>
-    <h4 style="text-align: center; color: red;">KATA YANG ANDA CARI TIDAK ADA DALAM ARTIKEL DESA</h4>
-     <% } %>
-     </div>
-  </div> 
-    </section>
-
-      <!-- ini untuk footer -->
-   <footer class="page-footer indigo darken-2">
-      <div class="container">
+       <div>       
+        <% if (postingan!=0) { %>
+        <% for(var i = 0; i < postingan.length; i++) { %>
+        <% if (i%2 == 0) { %>
         <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Alamat Kantor</h5> <br>
-            <p class="grey-text text-lighten-4">Kelompok Informasi Masyarakat <br>Jl. Panglima Sudirman No.507, Pesanggrahan, Kecamatan Batu, <br>Jawa Timur - 65313</p>
-          </div>
-          <div class="col l3 s12">
-            <h5 class="white-text">Kontak</h5> <br>
-            <p><i class="fas fa-phone"></i> (0341) 3061892 <br><i class="far fa-envelope"></i>  kimwarkop4@gmail.com</p>
-          </div>
-
-          <div class="col l3 s12">
-            <h5 class="white-text">Social Media</h5> <br>
-            <ul>
-              <div class="col s12 m2">
-                <li><a class="white-text" href="https://www.instagram.com/kim_tulungrejo/"><i class="fab fa-instagram small"></i></a></li></div>
-                <div class="col s12 m2">
-                <li><a class="white-text" href="/whatsapp"><i class="fab fa-whatsapp small"></i></a></li></div>
-                <div class="col s12 m2">
-                  <li><a class="white-text" href="https://www.facebook.com/kimtulungrejo.kwb.1"><i class="fab fa-facebook-square small"></i></a></li></div>
-                  <div class="col s12 m2">
-                    <li><a class="white-text" href="https://twitter.com/KimAnjasmoro"><i class="fab fa-twitter small"></i></a></li></div>
-                    <div class="col s12 m2">
-                      <li><a class="white-text" href="https://plus.google.com/+KIMDesaTulungrejoKotaBatu"><i class="fab fa-google-plus-g small"></i></a></li></div> <br>
-                    </ul>
-                  </div>
-                </div>
+          <div class="col m6">
+            <h4 ><a href="/baca/<%= postingan[i].idArtikel %>" >Artikel dari <%= postingan[i].desa %></a></h4>
+            <p><%= postingan[i].tentang%></p>
+            <div class="card">
+              <div class="card-image">
+                <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
               </div>
-              <div class="footer-copyright">
-                <div class="container"><i class="material-icons tiny">copyright</i> 2019. Allright Reserved. Design by <a href="timpkl.html">TIM PKL.</a>
-                  <a class="grey-text text-lighten-4 right" href="https://kim-warkop.blogspot.com/">Blog</a>
-
-                </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
               </div>
-            </footer>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
+                <p style="text-align: justify;"><%= postingan[i].postingan%></p>
+              </div>
+            </div>
+            <p>Diposting pada <%= postingan[i].tanggal.toLocaleDateString()%></p>  
+          </div>
+          <% } else { %>
+          <div class="col s12 m6">
+            <h4 ><a href="/baca/<%= postingan[i].idArtikel %>">Artikel dari <%= postingan[i].desa %></a></h4>
+            <p><%= postingan[i].tentang%></p>
+            <div class="card">
+              <div class="card-image">
+                <img class="activator" id="cardpost" src="/images/uploaded/<%=postingan[i].foto%>">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">more_vert</i></span>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4"><%= postingan[i].judul %><i class="material-icons right">close</i></span>
+                <p style="text-align: justify;"><%= postingan[i].postingan%></p>
+              </div>
+            </div> 
+            <p>Diposting pada <%= postingan[i].tanggal.toLocaleDateString()%></p>  
+          </div>  
+        </div>
+
+        <% } %>
+        <% } %>
+        <% } else {%>
+        <h4 style="text-align: center; color: red;">KATA YANG ANDA CARI TIDAK ADA DALAM ARTIKEL DESA</h4>
+        <% } %>
+      </div>
+    </div> 
+  </section>
+
+  <!-- ini untuk footer -->
+  <footer class="page-footer indigo darken-2">
+    <% include ./partials/footer %>
+  </footer>
 
 
 
 
 
 
-    <script type="text/javascript" src="../js/materialize.min.js"></script>
-    <script>
+  <script type="text/javascript" src="../js/materialize.min.js"></script>
+  <script>
 
-      M.AutoInit();
+    M.AutoInit();
 
-      const slider = document.querySelectorAll('.slider');
-      M.Slider.init(slider, {
-        indicators:false,
-        interval:7000,
-        duration:500, 
-        height:480 
-      });
+    const slider = document.querySelectorAll('.slider');
+    M.Slider.init(slider, {
+      indicators:false,
+      interval:7000,
+      duration:500, 
+      height:480 
+    });
 
 
-      const materialbox= document.querySelectorAll('.materialboxed');
-      M.Materialbox.init(materialbox);
+    const materialbox= document.querySelectorAll('.materialboxed');
+    M.Materialbox.init(materialbox);
 
-      const scroll = document.querySelectorAll('.scrollspy');
-      M.ScrollSpy.init(scroll, {
-        scrollOffset: 50
-      });  
+    const scroll = document.querySelectorAll('.scrollspy');
+    M.ScrollSpy.init(scroll, {
+      scrollOffset: 50
+    });  
 
-    </script>  
-    </body>
+  </script>  
+</body>
