--- a/views/loginAdmin.ejs
+++ b/views/loginAdmin.ejs
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
-      <!-- my CSS -->
-      <link rel="stylesheet" href="css/style.css">
-
-      <!-- LINK FONT DARI FONT AWESOME -->
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin KIM</title>
+  <% include ./partials/head %>
+  <title>Login Admin KIM</title>
 </head>
 <body>
 <section id="login" class="login white">
@@ -48,11 +36,17 @@
       </button>
 
         </div>
+        <div>
+        <a href="/">kembali ke home</a>
       </div>
+      </div>
+      
     </div>
-  </div>
+  </div> 
   </form>
+
 </section>
+
 
 <script type="text/javascript" src="js/materialize.min.js"></script>
       <script>
